作业更新